[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://screens/PauseScreen.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "blink"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="UI"]
anchor_right = 1.0
margin_top = 200.0
margin_bottom = 255.0
theme_type_variation = "TitleLabel"
text = "PAUSED"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 64.0
margin_right = 120.0
margin_bottom = 107.0
mouse_default_cursor_shape = 2
text = "CONTINUE"

[node name="ExitButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 128.0
margin_right = 120.0
margin_bottom = 171.0
mouse_default_cursor_shape = 2
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
autoplay = "blink"
anims/RESET = SubResource( 2 )
anims/blink = SubResource( 1 )

[connection signal="pressed" from="UI/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="UI/ExitButton" to="." method="_on_ExitButton_pressed"]
